--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,6 +1,6 @@
 <div class="share sticky-top sticky-top-offset">
     <p>
-        Share
+        Compartilhar
     </p>
     <ul>
         <li class="ml-1 mr-1">
@@ -20,8 +20,8 @@
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </li>
-
     </ul>
+    
     {% if page.comments != false %}
     <div class="sep">
     </div>
