feat: altera título do site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@ ga('send', 'pageview');
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
 
     <div class="container pr-0">
-
+        
     <!-- Begin Logo -->
-    <a class="navbar-brand" href="{{ site.baseurl }}/">R</a>
+        <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
     <!-- End Logo -->
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,15 +88,6 @@ ga('send', 'pageview');
 <div class="site-content">
 
 <div class="container">
-
-<!-- Site Title
-================================================== -->
-<div class="mainheading">
-    <h1 class="sitetitle">{{ site.name }}</h1>
-    <p class="lead">
-        {{ site.description }}
-    </p>
-</div>
 
 <!-- Content
 ================================================== -->
