--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,9 +71,10 @@ ga('send', 'pageview');
 
                 <li class="nav-item">
                     <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/mediumish-theme-jekyll">
-                    <i class="fab fa-github"></i>&nbsp;&nbsp;Github</a>
+                        <i class="fab fa-github"></i>
+                    </a>
                 </li>
-
+    
             </ul>
             
         <!-- End Menu -->
