--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -9,6 +9,6 @@
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    <noscript>Habilite o JavaScript para visualizar o <a href="http://disqus.com/?ref_noscript">comentários alimentados por Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comentários alimentados por<span class="logo-disqus">Disqus</span></a>
 </section>
