--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,15 +66,17 @@ ga('send', 'pageview');
                 </li>
                 
                 <li class="nav-item">
-                    <a target="_blank" class="nav-link" href="https://bootstrapstarter.com/bootstrap-templates/template-mediumish-bootstrap-jekyll/"> Linkedin</a>
+                    <a target="_blank" class="nav-link" href="https://bootstrapstarter.com/bootstrap-templates/template-mediumish-bootstrap-jekyll/">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </li>
-
+                
                 <li class="nav-item">
                     <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/mediumish-theme-jekyll">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
-    
+
             </ul>
             
         <!-- End Menu -->
